# ymm4_creator

./: .flake8  .gitignore  __init__.py  add_latex.py  add_voice.py  config.py  generate_voice.py  latex_to_png.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  scene_adder.py  setup.py  voicevox_client.py  ymmp_templates.py  ymmp_utils.py
develop_tools/: format.ps1  lint.ps1
formula/: __init__.py  add_latex.py  build_latex.py  latex_to_png.py  latex_to_png.pyi
ml_model/: main.py  model.py  ymmp_generator.py
utils/: __init__.py  ymmp_templates.py  ymmp_utils.py
voice/: __init__.py  add_voice.py  generate_voice.py  voicevox_client.py  ymmp_templates.py
