[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils", "formula", "voice"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
mypy_path = ["formula"]

[[tool.mypy.overrides]]
module = ["utils.*", "formula.*", "voice.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["latex_to_png", "pylatex.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["utils.ymmp_templates"]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "PL", "RUF"]
ignore = ["E501"]  # line length violations are handled by black
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["utils", "formula", "voice"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] 