[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["utils", "formula", "voice"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "PL", "RUF"]
ignore = ["E501"]  # line length violations are handled by black
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["utils", "formula", "voice"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] 